2009-06-25  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (lsaauth): Close unused handle.
	(lsaprivkeyauth): Ditto.

2009-06-23  Corinna Vinschen  <corinna@vinschen.de>

	* sec_auth.cc (get_server_groups): Ignore errors from
	get_user_local_groups.

2009-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (spawn_guts): Don't run additional check for Win32
	incompatible CWD if newargv.fixup bailed out already.
	(av::fixup): Check shell scripts for executability.

2009-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (chdir): Check error conditions first.

2009-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recv_internal): Mark WSARecvMsg
	as NO_COPY.

2009-06-16  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.cc (fhandler_base::read_overlapped): Use a better variable
	name.

2009-06-16  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.cc (fhandler_base::read_overlapped): Preserve len when
	looping due to received signal.

2009-06-15  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (get_flags): New static function to generate interface flags
	value.
	(get_ipv4fromreg_ipcnt): New static function to fetch number of
	configured IPv4 addresses for a given NIC from registry.
	(get_ipv4fromreg): New static function to fetch configured IPv4
	addresses for a given NIC from registry.
	(get_friendlyname): New static function to generate friendly name.
	(get_hwaddr): New static function to copy hardware address.
	(get_xp_ifs): Restructure slightly.  Add code to generate IPv4 entries
	entries for interfaces which are disconnected.

2009-06-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* errno.cc (errmap): Add mapping for ERROR_IO_INCOMPLETE.
	* fhandler.cc (fhandler_base::fcntl): Fix comment.
	(fhandler_base::wait_overlapped): Accept an optional len parameter.
	Use the len parameter when WriteFile fails with ERROR_IO_PENDING.  Make
	debug output less alarming.