@@ -55,6 +55,7 @@ wincaps wincap_unknown __attribute__((section (".cygwin_dll_common"), shared)) =
   has_sendmsg:false,
   has_broken_udf:false,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_nt4 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -92,6 +93,7 @@ wincaps wincap_nt4 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:false,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_nt4sp4 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -129,6 +131,7 @@ wincaps wincap_nt4sp4 __attribute__((section (".cygwin_dll_common"), shared)) = 
   has_sendmsg:false,
   has_broken_udf:false,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_2000 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -166,6 +169,7 @@ wincaps wincap_2000 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_2000sp4 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -203,6 +207,7 @@ wincaps wincap_2000sp4 __attribute__((section (".cygwin_dll_common"), shared)) =
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_xp __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -240,6 +245,7 @@ wincaps wincap_xp __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_xpsp1 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -277,6 +283,7 @@ wincaps wincap_xpsp1 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_xpsp2 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -314,6 +321,7 @@ wincaps wincap_xpsp2 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_2003 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -351,6 +359,7 @@ wincaps wincap_2003 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:false,
   has_broken_udf:true,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_vista __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -388,6 +397,7 @@ wincaps wincap_vista __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:true,
   has_broken_udf:false,
   has_console_handle_problem:false,
+  has_broken_alloc_console:false,
 };
 
 wincaps wincap_7 __attribute__((section (".cygwin_dll_common"), shared)) = {
@@ -425,6 +435,7 @@ wincaps wincap_7 __attribute__((section (".cygwin_dll_common"), shared)) = {
   has_sendmsg:true,
   has_broken_udf:false,
   has_console_handle_problem:true,
+  has_broken_alloc_console:true,
 };
 
 wincapc wincap __attribute__((section (".cygwin_dll_common"), shared));
