@@ -47,6 +47,7 @@ struct wincaps
   unsigned has_sendmsg					: 1;
   unsigned has_broken_udf				: 1;
   unsigned has_console_handle_problem			: 1;
+  unsigned has_broken_alloc_console			: 1;
 };
 
 class wincapc
@@ -100,6 +101,7 @@ public:
   bool	IMPLEMENT (has_sendmsg)
   bool	IMPLEMENT (has_broken_udf)
   bool	IMPLEMENT (has_console_handle_problem)
+  bool	IMPLEMENT (has_broken_alloc_console)
 
 #undef IMPLEMENT
 };
